--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,11 +24,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="57.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="208" translatesAutoresizingMaskIntoConstraints="NO" id="i4l-Sr-FmM">
-                                            <rect key="frame" x="18" y="2" width="376" height="53.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="i4l-Sr-FmM">
+                                            <rect key="frame" x="20" y="2" width="374" height="53.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="g2N-Ah-6d5">
-                                                    <rect key="frame" x="0.0" y="0.0" width="76" height="53"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="274" height="53"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBd-Jn-uO6">
                                                             <rect key="frame" x="0.0" y="0.0" width="49" height="31.5"/>
@@ -44,7 +45,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Stamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-cF-GY4">
-                                                    <rect key="frame" x="284" y="0.0" width="92" height="20.5"/>
+                                                    <rect key="frame" x="282" y="0.0" width="92" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -55,6 +56,7 @@
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="i4l-Sr-FmM" secondAttribute="trailing" constant="20" id="Wvb-qr-7kc"/>
                                         <constraint firstAttribute="bottom" secondItem="i4l-Sr-FmM" secondAttribute="bottom" constant="2" id="b9Z-Kw-MBy"/>
+                                        <constraint firstItem="i4l-Sr-FmM" firstAttribute="leading" secondItem="Sep-pE-u2F" secondAttribute="leading" constant="20" id="oxd-PN-rsh"/>
                                         <constraint firstItem="i4l-Sr-FmM" firstAttribute="top" secondItem="Sep-pE-u2F" secondAttribute="top" constant="2" id="xHl-RD-OEd"/>
                                     </constraints>
                                 </tableViewCellContentView>
